starter items added

--- a/index.HTML
+++ b/index.HTML
@@ -32,6 +32,7 @@
           </div>
         </div>
         <div class="items-box">
+          <div class="item" id="itemStarter"></div>
           <div class="item" id="item1"></div>
           <div class="item" id="item2"></div>
           <div class="item" id="item3"></div>
